<resources>
    <string name="app_name">EasyXe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thang</string>
    <string name="nav_header_subtitle">09xxxxxxx90</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txtDangNhap">Đăng nhập</string>
    <string name="txtDangKy">Đăng Ký</string>
    <string name="txtDNFace">Đăng nhập bằng Facebook</string>
    <string name="txtSkip">Skip</string>
    <string name="txtSDT">Số điện thoại</string>
    <string name="txtDiaChi">Địa chỉ</string>
    <string name="txtEmail">Email</string>
    <string name="txtNgaySinh">Ngày sinh</string>
    <string name="txtGT">Giới tính</string>
    <string name="txtNam">Nam</string>
    <string name="txtNu">Nữ</string>
    <string name="txtXong">Xong</string>
    <string name="txtMKCu">Mật khẩu cũ</string>
    <string name="txtMKMoi">Mật khẩu mới</string>
    <string name="txtNhapLaiMK">Nhập lại mật khẩu mới</string>
    <string name="txtNhapSDTDK">Nhập số điện thoại đã đăng ký</string>
    <string name="btnGui">Gửi</string>
    <string name="txtCapNhatTT">Nhập số điện thoại</string>
    <string name="btnXong">Xong</string>
    <string name="txtTenHienThi">Tên hiển thị</string>
    <string name="login_name">Tài khoản:</string>
    <string name="login_pass">Mật khẩu:</string>
    <string name="forget_pass">Quên mật khẩu?</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_cancel">Hủy</string>
    <string name="register_name">Tên đăng nhập</string>
    <string name="register_phone">Số điện thoại</string>
    <string name="register_pass">Mật khẩu</string>
    <string name="register_re_pass">Nhập lại mật khẩu</string>
    <string name="btn_register">Đăng ký</string>
    <string name="btn_clear">Đặt lại</string>
    <string name="hint_login_name">Nhập số điện thoại</string>
    <string name="hint_login_pass">Nhập mật khẩu</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>

    <string name="tv_detail">Mô tả chi tiết</string>
    <string name="tv_phone">Số điện thoại liên lạc</string>
    <string name="tv_delivery">Địa chỉ giao hàng(nếu có)</string>
    <string name="btn_submit">Đăng</string>
    <string name="appBar_Sell_Product">Đăng bán sản phẩm</string>
    <string name="imgCar">Hình ảnh cần đăng bán</string>
    <string name="iconBack">Nút trở về màn hình vừa chuyển</string>

    //Spinner
    <string-array name="array_Car">
        <item>Chọn loại xe</item>
        <item>Xe máy</item>
        <item>Xe tải</item>
        <item>Xe điện</item>
        <item>Xe đạp</item>
        <item>Ô tô</item>
        <item>Phương tiện khác</item>
    </string-array>

    <string-array name="array_Address">
        <item>Chọn địa điểm</item>
        <item>An Giang</item>
        <item>Cà Mau</item>
        <item>Bạc Liêu</item>
        <item>Sóc Trăng</item>
        <item>Tiền Giang</item>
    </string-array>
    <string name="title_activity_screen19">Screen19Activity</string>
    <string name="toolbar_title_19">Sửa thông tin cá nhân</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="admin_title_home">Quản lý bài đăng</string>
    <string name="admin_title_notifi">Quản lý bài vi phạm</string>
    <string name="admin_title_person">Quản lý người dùng</string>
    <string name="admin_title_more">Chức năng khác</string>
    <string name="action_search">Tìm kiếm</string>

    <string name="item_admin_8_text">%1$s | %2$f đ</string>

    // chi

    <string name="txtNewPassword">Mật khẩu mới</string>
    <string name="txtInputPassword">Nhập lại mật khẩu mới</string>
    <string name="txtGioiTinh">Giới tính</string>
    <string name="txtInputPhone">Nhập số điện thoại đã đăng ký</string>

    //sang
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_item1">Tổng quan</string>
    <string name="tab_item2">Chi tiết</string>
    <string name="tab_itemProduct">SẢN PHẨM</string>
    <string name="tab_itemRate">ĐÁNH GIÁ</string>
    <string name="tab_itemFollowers">FOLLOWERS</string>
    <string name="tab_itemFollowing">FOLLOWINGS</string>

    <string name="textView_Name">Họ và tên</string>
    <string name="textView_Address">Địa chỉ</string>

    // Rate
    <string name="name_Rate">Mediline Kennedy</string>
    <string name="comment">Ủng hộ</string>

    // Product
    <string name="name_Product">Lamboghini</string>
    <string name="price">2000000000</string>

    // Followings
    <string name="name_Followings">Medeline Kennedy</string>
    <string name="address">Hà Nội</string>

    // Followers
    <string name="name_Followers">Medeline Kennedy</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Dashboard Fragment
    <string name="dashboard_tab_text_1">Đang bán</string>
    <string name="dashboard_tab_text_2">Hết hạn</string>
    <string name="dashboard_tab_text_3">Hết hàng</string>
    <string name="notif_tab_text_1">Tin theo dõi</string>
    <string name="notif_tab_text_2">Người theo dõi</string>

</resources>
