<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".activities.ChangePassword">


    // Tỉ lệ 8
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        // Mật khẩu cũ
        <TextView
            android:id="@+id/txtMKCu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMKCu"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edtMKCu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        // Mật khẩu mới
        <TextView
            android:id="@+id/txtMKMoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNewPassword"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edtMKMoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        // Nhập lại mật khẩu
        <TextView
            android:id="@+id/txtNhapLaiMK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtInputPassword"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edtNhapLaiMK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </LinearLayout>

    // Tỉ lệ 10
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center">

        <Button
            android:id="@+id/btnXong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="110dp"
            android:text="@string/btnXong"
            android:background="@color/btnXong"
            android:textColor="@color/txtXong"/>

    </LinearLayout>
</LinearLayout>