<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SellProductActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_appbar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_sell_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tb_img_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/iconBack"
                    android:src="@drawable/ic_chevron_left_black_24dp" />

                <TextView
                    android:id="@+id/tb_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:text="@string/appBar_Sell_Product"
                    android:textColor="@color/txtColor"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/marginApp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_sell_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/imgCar"
            android:src="@drawable/ic_launcher_background" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinTypeCar"
                android:layout_width="340dp"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"></Spinner>

            <Spinner
                android:id="@+id/spinAddress"
                android:layout_width="340dp"
                android:layout_height="46dp"></Spinner>
        </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tv_detail"/>
            </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_phone_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_phone"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_address_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_delivery"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="@color/color_btn_submit"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/btn_submit"
            android:textColor="@color/txtColor"
            android:textSize="@dimen/btn_submit"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>